# BitNet

./: .gitmodules  AURORA_BUILD_INTEGRATION.md  BUILD_AURORA.md  CMakeLists.txt  CMakeLists_aurora.cmake  setup_env.py
gpu/: ggml-dq-attention-cuda.cu  ggml-dq-linear-cuda.cu  ggml-dual-complex-cuda.cu  ggml-dual-quaternion-cuda.cu  ggml-ffe-quantization-cuda.cu  ggml-navigation-cuda.cu  ggml-screw-theory-cuda.cu  ggml-transcender-cuda.cu  suite_metrics_cuda.cu  tkg_scoring_cuda.cu
include/: aurora_artifacts.h  aurora_config.h  aurora_memory_bank.h  genesis_metrics.h  ggml-aurora-memory.h  ggml-dq-attention.h  ggml-dq-linear.h  ggml-dual-complex.h  ggml-dual-quaternion.h  ggml-ffe-quantization.h  ggml-gpu-metrics.h  ggml-lattice-addressing.h  ggml-lattice-storage.h  ggml-navigation-cuda.h  ggml-probe-to-lattice.h  ggml-screw-theory.h  ggml-temporal-evolution.h  ggml-transcender.h  llama-aurora-attention.h  llama-aurora-integration.h  llama-aurora-navigation.h  probe-encoder.h  probe_cuda_python.h  suite_metrics.h  tkg_dataset.h
src/: CMakeLists.txt  aurora_artifacts.cpp  aurora_config.cpp  aurora_integration_example.cpp  aurora_memory_bank.cpp  genesis_metrics.cpp  ggml-aurora-memory.cpp  ggml-dq-attention.cpp  ggml-dq-linear.cpp  ggml-dual-complex.cpp  ggml-dual-quaternion.cpp  ggml-ffe-quantization.cpp  ggml-gpu-metrics.cpp  ggml-lattice-addressing.cpp  ggml-lattice-storage.cpp  ggml-probe-to-lattice.cpp  ggml-screw-theory.cpp  ggml-temporal-evolution.cpp  ggml-transcender.cpp  llama-aurora-attention.cpp  llama-aurora-integration.cpp  llama-aurora-navigation.cpp  probe-encoder.cpp  probe_cuda_python.cpp  suite_metrics.cpp  tkg_dataset.cpp
src/tests/: test_real_text.cpp
tests/: test_aurora_dual_complex.cpp  test_aurora_integration.cpp  test_aurora_memory_cpp.cpp  test_aurora_navigation.cpp  test_dq_attention_cpp.cpp  test_dq_linear_cpp.cpp  test_dual_quaternion_cpp.cpp  test_ffe_quantization_cpp.cpp  test_lattice_cpp.cpp  test_probe_encoder_cpp.cpp  test_screw_theory_cpp.cpp  test_transcender_cpp.cpp
